
- #7708, #9580: Ensure Stdlib documentation index refers to Stdlib.
  (Stephen Dolan, review by Florian Angeletti, report by Hannes Mehnert)

- #9610: manual, C FFI: naked pointers are deprecated, detail the
  forward-compatible options for handling out-of-heap pointers.
  (Xavier Leroy, review by Mark Shinwell, David Allsopp and Florian Angeletti)

### Compiler user-interface and warnings:

- GPR#1664: make -output-complete-obj link the runtime native c libraries when
  building shared libraries like `-output-obj`.
  (Florian Angeletti, review by Nicolás Ojeda Bär)

* #7678, #8631: ocamlc -c and ocamlopt -c pass same switches to the C
  compiler when compiling .c files (in particular, this means ocamlopt
  passes -fPIC on systems requiring it for shared library support).
  (David Allsopp, report by Daniel Bünzli, review by Sébastien Hinderer)

- #9074: reworded error message for non-regular structural types
  (Florian Angeletti, review by Jacques Garrigue and Leo White,
   report by Chas Emerick)

- #8938: Extend ocamlopt option "-stop-after" to handle "scheduling" argument.
  (Greta Yorsh, review by Florian Angeletti and Sébastien Hinderer)

- #8945, #9086: Fix toplevel show directive to work with constructors
  (Simon Parry, review by Gabriel Scherer, Jeremy Yallop,
  Alain Frisch, Florian Angeletti)

- #9107: improved error message for exceptions in module signature errors
  (Gabriel Scherer, review by Florian Angeletti)

- #9208: -dno-locations option to hide source locations (and debug events)
  from intermediate-representation dumps (-dfoo).
  (Gabriel Scherer, review by Vincent Laviron)

- #9393: Improve recursive module usage warnings
  (Leo White, review by Thomas Refis)

- #2141: generate .annot files from cmt data; deprecate -annot.
  (Nicolás Ojeda Bär, review by Alain Frisch, Gabriel Scherer and Damien
  Doligez)

- #9486: Fix configuration for the Haiku operating system
  (Sylvain Kerjean, review by David Allsopp and Sébastien Hinderer)
